--- a/index.html
+++ b/index.html
@@ -2,129 +2,136 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Saung Hnin Phyu | Junior Data Scientist</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Saung Hnin Phyu | Data Scientist</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      padding: 2rem;
-      line-height: 1.6;
-      background-color: #f9f9f9;
-      color: #333;
+      scroll-behavior: smooth;
     }
-    h1, h2, h3 {
-      color: #1a73e8;
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
     }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      padding: 2rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    nav {
+      background: #34495e;
+      padding: 10px 0;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      text-align: center;
     }
-    .section {
-      margin-bottom: 2rem;
-    }
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-    a {
-      color: #1a73e8;
+    nav a {
+      color: white;
+      margin: 0 15px;
       text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .skills span {
+      display: inline-block;
+      background: #ecf0f1;
+      margin: 5px;
+      padding: 8px 12px;
+      border-radius: 20px;
+    }
+    footer {
+      background: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+    }
+    .profile-img {
+      display: block;
+      margin: 20px auto;
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <header>
     <h1>Saung Hnin Phyu</h1>
-    <h2>Junior Data Scientist</h2>
+    <p>Junior Data Scientist</p>
+  </header>
 
-    <div class="section">
-      <h3>📞 Contact</h3>
-      <p>📱 (+66) 097 958 4521, 094 548 5912</p>
-      <p>📧 saunghninphyu7210@gmail.com</p>
-      <p>📍 Bangkok, Thailand</p>
-      <p>
-        🔗 <a href="https://www.linkedin.com/in/your-link">LinkedIn</a> |
-        <a href="https://github.com/your-github">GitHub</a>
-      </p>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#experience">Experience</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <img src="images/profile.jpg" alt="Saung Hnin Phyu" class="profile-img" />
+    <p>
+      Highly motivated and detail-oriented Data Scientist with a strong foundation in AI,
+      machine learning, and data science. Committed to collaborative and impactful work
+      that delivers optimal engineering results.
+    </p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills">
+      <span>Python</span><span>SQL</span><span>R</span><span>C</span><span>C#</span>
+      <span>TensorFlow</span><span>PyTorch</span><span>Pandas</span><span>NumPy</span>
+      <span>Seaborn</span><span>Linux</span><span>Microsoft Office</span>
     </div>
+  </section>
 
-    <div class="section">
-      <h3>🎓 Education</h3>
-      <p><strong>King Mongkut's Institute of Technology Ladkrabang</strong><br>
-      Bachelor of Engineering in Robotics & AI Engineering<br>
-      Aug 2021 – Apr 2025 | GPA: 3.75/4</p>
-    </div>
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>Myanmar Trip Advisory Chatbot</li>
+      <li>Credit Card Fraud Detection</li>
+      <li>Danish - English Machine Translation Model</li>
+      <li>Shopping List Application</li>
+      <li>Smart Parking System</li>
+      <li>TraveLink Mobile Application</li>
+      <li>Automated Cannabis Planting System</li>
+    </ul>
+  </section>
 
-    <div class="section">
-      <h3>🧠 Profile</h3>
-      <p>Highly motivated and detail-oriented Data Scientist with a strong foundation in AI, ML, and data science. Committed to collaboration and dedicated to achieving optimal engineering results through practical knowledge and technical expertise.</p>
-    </div>
+  <section id="experience">
+    <h2>Experience</h2>
+    <ul>
+      <li><strong>Data Scientist</strong> - Listening247, UK (Feb 2025 - Present)</li>
+      <li><strong>Data Scientist Intern</strong> - Listening247 (Jul 2024 - Jan 2025)</li>
+      <li><strong>ML Engineer Intern</strong> - Vast Hive, Denmark (May 2024 - Oct 2024)</li>
+      <li><strong>Teaching Assistant</strong> - KMITL (Jul 2023 - Apr 2024)</li>
+      <li><strong>PR Member</strong> - KMITL (Aug 2022 - Jun 2023)</li>
+      <li><strong>Game Developer Intern</strong> - Tokai University, Japan (May - Jul 2023)</li>
+      <li><strong>Curriculum Developer</strong> - Thate Pan Hub (Feb - Dec 2022)</li>
+    </ul>
+  </section>
 
-    <div class="section">
-      <h3>💼 Work Experience</h3>
-      <ul>
-        <li><strong>Listening247 (UK)</strong><br>Data Scientist – Feb 2025–Present<br>Intern – Jul 2024–Jan 2025<br>
-        ▸ Annotated unlabeled data with AI tools, performed precision checks<br>
-        ▸ Preprocessed and analyzed large text datasets<br>
-        ▸ Worked on sentiment modeling, topic modeling, and unlabeled data</li><br>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: saunghninphyu7210@gmail.com</p>
+    <p>Phone: (+66) 097 958 4521</p>
+    <p>Location: Bangkok, Thailand</p>
+    <p>
+      <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/Saung210" target="_blank">GitHub</a>
+    </p>
+  </section>
 
-        <li><strong>Vast Hive (Denmark)</strong><br>Machine Learning Engineer Intern – May 2024–Oct 2024<br>
-        ▸ Developed and optimized NLP models with TensorFlow & PyTorch<br>
-        ▸ Worked on machine translation and large text datasets</li><br>
-
-        <li><strong>KMITL (Thailand)</strong><br>Teaching Assistant – Jul 2023–Apr 2024<br>
-        ▸ Guided students, reviewed code, and provided feedback on projects<br>
-        Public Relations – Aug 2022–Jun 2023<br>
-        ▸ Managed events and communication for the Robotics & AI department</li><br>
-
-        <li><strong>Tokai University (Japan)</strong><br>Game Research & Developer – May 2023–Jul 2023<br>
-        ▸ Learned Unity and C# to develop interactive game prototypes</li><br>
-
-        <li><strong>Thate Pan Hub (Myanmar)</strong><br>Curriculum Developer – Feb 2022–Dec 2022<br>
-        ▸ Designed AI & CS curriculum for tech-enthusiastic teens in Myanmar</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h3>🧰 Skills</h3>
-      <p><strong>Technical:</strong> Python, SQL, R, C, C#, Pandas, NumPy, Seaborn, TensorFlow, PyTorch, Ubuntu, Linux, Minitab</p>
-      <p><strong>Tools:</strong> Microsoft Office, VS Code, Git</p>
-      <p><strong>Soft Skills:</strong> Adaptability, Teamwork, Communication, Time Management, Leadership, Critical Thinking</p>
-    </div>
-
-    <div class="section">
-      <h3>🌐 Languages</h3>
-      <p>🔹 English (Fluent) – IELTS 7.0<br>
-         🔹 Burmese (Native)<br>
-         🔹 Japanese (Intermediate) – JLPT N4</p>
-    </div>
-
-    <div class="section">
-      <h3>📜 Certifications</h3>
-      <ul>
-        <li>AWS Academy Cloud Foundations</li>
-        <li>Google Data Analytics Certificate</li>
-        <li>Machine Learning (Stanford/Coursera)</li>
-        <li>Japanese Language Proficiency Test (JLPT N4)</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h3>🚀 Projects</h3>
-      <ul>
-        <li>Myanmar Trip Advisory Chatbot</li>
-        <li>Credit Card Fraud Detection</li>
-        <li>Danish-English Machine Translation Model</li>
-        <li>Shopping List Application</li>
-        <li>Smart Parking System</li>
-        <li>TraveLink Mobile App</li>
-        <li>Automated Cannabis Planting System</li>
-      </ul>
-    </div>
-  </div>
+  <footer>
+    <p>&copy; 2025 Saung Hnin Phyu. All rights reserved.</p>
+  </footer>
 </body>
 </html>
