--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <p>Phone: (+66) 097 958 4521</p>
     <p>Location: Bangkok, Thailand</p>
     <p>
-      <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a> |
-      <a href="https://github.com/Saung210" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/saunghninphyu" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/SaungHninPhyu" target="_blank">GitHub</a>
     </p>
   </section>
 
