--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Portfolio</title>
+  <title>Saung Hnin Phyu | Data Scientist</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -153,7 +153,7 @@
 <body>
 
   <header>
-    <div><strong>Your Name</strong></div>
+    <div><strong>Saung Hnin Phyu</strong></div>
     <nav>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
@@ -163,30 +163,34 @@
   </header>
 
   <div class="container hero">
-    <img src="your-profile.jpg" alt="Your profile picture" />
-    <h1>Hello, I'm Your Name</h1>
-    <p>A short and sweet intro about you. Mention your specialty or goal in one line.</p>
+    <img src="images/profile.jpg" alt="Saung" />
+    <h1>Hello, I'm Saung!</h1>
+    <p>I am highly motivated and detail-oriented Data Scientist and committed to working 
+       as a collaborative and positive team member.</p>
     <div class="social-links">
-      <a href="#" target="_blank">LinkedIn</a>
-      <a href="#" target="_blank">GitHub</a>
-      <a href="mailto:your@email.com">Email</a>
+      <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/Saung210" target="_blank">GitHub</a>
+      <a href="saunghninphyu7210@gmail.com">Email</a>
     </div>
     <div class="scroll-down">↓ Scroll down</div>
   </div>
 
   <div class="container" id="about">
     <h2>About Me</h2>
-    <p>Write a short paragraph about who you are, what you do, and what drives you. Keep it natural and personal.</p>
+    <p>I am highly motivated and detail-oriented Data Scientist with a strong foundation in 
+       artificial intelligence, machine learning, and data science. Committed to working 
+       as a collaborative and positive team member, striving to utilize my knowledge and 
+       expertise for optimal engineering results.</p>
   </div>
 
   <div class="container" id="skills">
     <h2>Skills</h2>
     <div class="skills">
-      <div>HTML & CSS</div>
-      <div>JavaScript</div>
-      <div>React</div>
       <div>Python</div>
-      <div>UI/UX Design</div>
+      <div>C</div>
+      <div>C++</div>
+      <div>SQL</div>
+      <div>Linux</div>
     </div>
   </div>
 
@@ -194,7 +198,7 @@
     <h2>Projects</h2>
     <div class="projects">
       <div>
-        <strong>Project One</strong>
+        <strong>Smart Inventory System with Chatbot</strong>
         <p>Short description of your project. Highlight your role and achievement.</p>
       </div>
       <div>
@@ -208,14 +212,14 @@
     <h2>Contact</h2>
     <p>I'm currently open to opportunities! Feel free to reach out via email or connect with me on social media.</p>
     <div class="social-links">
-      <a href="#" target="_blank">LinkedIn</a>
-      <a href="#" target="_blank">GitHub</a>
-      <a href="mailto:your@email.com">Email</a>
+      <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/Saung210" target="_blank">GitHub</a>
+      <a href="saunghninphyu7210@gmail.com">Email</a>
     </div>
   </div>
 
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Saung Hnin Phyu. All rights reserved.
   </footer>
 
 </body>
