--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </header>
 
   <div class="container hero">
-    <img src="images/profile.jpg" alt="Saung" />
+    <img src="images/profile.png" alt="Saung" />
     <h1>Hello, I'm Saung!</h1>
     <p>I am highly motivated and detail-oriented Data Scientist and committed to working 
        as a collaborative and positive team member.</p>
@@ -171,8 +171,9 @@
       <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
       <a href="https://github.com/Saung210" target="_blank">GitHub</a>
       <a href="saunghninphyu7210@gmail.com">Email</a>
+      <a href="+66979584521"?Phone</a>
     </div>
-    <div class="scroll-down">↓ Scroll down</div>
+    <div class="scroll-down">↓ Continue</div>
   </div>
 
   <div class="container" id="about">
@@ -198,16 +199,56 @@
     <h2>Projects</h2>
     <div class="projects">
       <div>
-        <strong>Smart Inventory System with Chatbot</strong>
-        <p>Short description of your project. Highlight your role and achievement.</p>
+        <strong>RAIOne: Smart Inventory System with Chatbot</strong>
+        <p>This is my final year capstone project with my four teammates. My role was developing a chatbot.
+          RAIOne is a web and mobile application developed to address the inefficiencies of traditional student administration and inventory management systems in the Robotics and AI department at KMITL. 
+          By integrating modern technologies like React.js, NestJS, GraphQL, and PostgreSQL, the application streamlines equipment borrowing, student management, and approval workflows. 
+          The system also features an AI-powered chatbot using Python, GraphQL, LINE Messaging API and Line Frontend Framework (LIFF) to enhance user interaction and provide real-time assistance. 
+          This solution aims to improve efficiency, reduce errors, and enable scalable management of both student data and lab resources. The research focuses on creating an integrated platform that addresses gaps in existing systems.</p>
       </div>
       <div>
-        <strong>Project Two</strong>
-        <p>Short description of your project. Highlight your role and achievement.</p>
+        <strong>Danish-English Translation Model</strong>
+        <p>This is my individual project while I was a remote Machine Learning Engineer Intern at VastHive Company Limited, based in Tórshavn, Faroe Islands, specializes
+           in digital solutions.This project explores various neural machine translation (NMT) approaches for translating Danish text into English. </p>
       </div>
     </div>
   </div>
 
+  <div class="container" id="experience">
+    <h2>Experiences</h2>
+    <div>
+      <strong> Data Scientist </strong>
+      <p>Listening247, London, United Kingdom (February 2025 - Present)
+         Annotate unlabeled data with AI tool, precision check
+         Preprocessed and analyzed large text datasets to ensure high-quality input for model training,
+         Sentiment modeling, topic modeling and working with unlabeled data</p>
+    </div>
+    <div>
+      <strong>Data Scientist Intern</strong>
+      <p>Listening247, London, United Kingdom (July 2024 - January 2025)
+         Annotate unlabeled data with AI tool, precision check
+         Preprocessed and analyzed large text datasets to ensure high-quality input for model training,
+         Sentiment modeling, topic modeling and working with unlabeled data</p>
+    </div>
+    <div>
+      <strong>Machine Learning Engineer Intern</strong>
+      <p>Vast Hive, Faroe Islands, Denmark (May 2024 - October 2024)
+         Developed and optimized NLP Models by utilizing frameworks such as TensorFlow, PyTorch,
+         Preprocessed and analyzed large text datasets to ensure high-quality input for model training,
+         Train parallel data for machine translation</p>
+    </div>
+    <div>
+      <strong>Teaching Assistant</strong>
+      <p>King Mongkut's Institute of Technology, Ladkrabang, Bangkok, Thailand (July 2023 - April 2024)
+         Guided students through practical projects involving the programming languages,
+         Evaluated student projects and provided feedback to help improve their design and implementation skills.</p>
+    <div>
+      <strong>Game Research and Developer Intern</strong>
+      <p> Tokai University, Tokyo, Japan (May 2023 - July 2023)
+          Learned C# and Unity and developed a game by utilizing them</p>
+    </div>
+  </div>  
+    
   <div class="container" id="contact">
     <h2>Contact</h2>
     <p>I'm currently open to opportunities! Feel free to reach out via email or connect with me on social media.</p>
