--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
-      --primary-color: #000;
-      --secondary-color: #666;
+      --primary-color: #333;
+      --secondary-color: #777;
       --accent-color: #0077b6;
-      --bg-color: #fff;
+      --bg-color: #f7f7f7;
+      --highlight-color: #ff7b7b;
+      --border-radius: 8px;
     }
 
     * {
@@ -24,6 +26,7 @@
       background-color: var(--bg-color);
       color: var(--primary-color);
       line-height: 1.6;
+      padding-top: 60px;
     }
 
     header {
@@ -33,16 +36,23 @@
       align-items: center;
       position: sticky;
       top: 0;
-      background: var(--bg-color);
+      background: #fff;
       z-index: 1000;
-      border-bottom: 1px solid #eee;
+      border-bottom: 2px solid #eee;
+    }
+
+    header strong {
+      font-size: 1.4rem;
+      font-weight: 700;
     }
 
     nav a {
       margin-left: 20px;
       text-decoration: none;
       color: var(--primary-color);
-      font-weight: 500;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
       transition: color 0.3s;
     }
 
@@ -60,6 +70,10 @@
 
     .hero {
       padding: 80px 20px;
+      background: var(--highlight-color);
+      color: white;
+      border-radius: var(--border-radius);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .hero img {
@@ -68,18 +82,19 @@
       object-fit: cover;
       border-radius: 50%;
       margin-bottom: 20px;
-      border: 4px solid var(--primary-color);
+      border: 4px solid var(--accent-color);
     }
 
     .hero h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 10px;
     }
 
     .hero p {
-      color: var(--secondary-color);
-      max-width: 600px;
+      color: #f0f0f0;
+      max-width: 650px;
       margin: auto;
+      font-size: 1.2rem;
     }
 
     .social-links {
@@ -87,9 +102,9 @@
     }
 
     .social-links a {
-      margin: 0 10px;
-      color: var(--primary-color);
-      font-size: 1.5rem;
+      margin: 0 12px;
+      color: #fff;
+      font-size: 1.6rem;
       transition: color 0.3s;
     }
 
@@ -99,54 +114,59 @@
 
     section {
       margin-top: 80px;
+      padding: 20px 0;
     }
 
     h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
+      font-size: 2.2rem;
+      margin-bottom: 25px;
+      font-weight: 600;
+      color: var(--primary-color);
     }
 
     .skills, .projects {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      text-align: left;
-      max-width: 800px;
-      margin: auto;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 25px;
+      justify-items: center;
+      margin-top: 30px;
     }
 
     .skills div, .projects div {
-      padding: 15px;
-      border: 1px solid #eee;
-      border-radius: 8px;
-      transition: transform 0.3s;
+      padding: 20px;
+      background: #fff;
+      border-radius: var(--border-radius);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      transition: transform 0.3s, box-shadow 0.3s;
     }
 
     .skills div:hover, .projects div:hover {
-      transform: translateY(-5px);
-      border-color: var(--accent-color);
+      transform: translateY(-8px);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
     }
 
     footer {
       text-align: center;
       padding: 20px;
       margin-top: 50px;
+      background: var(--bg-color);
       border-top: 1px solid #eee;
       color: var(--secondary-color);
       font-size: 0.9rem;
     }
 
-    /* Scroll indicator */
     .scroll-down {
       margin-top: 40px;
       font-size: 1rem;
-      color: var(--secondary-color);
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: 600;
       animation: bounce 2s infinite;
     }
 
     @keyframes bounce {
       0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(5px); }
+      50% { transform: translateY(8px); }
     }
   </style>
 </head>
@@ -165,23 +185,19 @@
   <div class="container hero">
     <img src="images/profile.png" alt="Saung" />
     <h1>Hello, I'm Saung!</h1>
-    <p>I am highly motivated and detail-oriented Data Scientist and committed to working 
-       as a collaborative and positive team member.</p>
+    <p>I am a Data Scientist with a passion for leveraging artificial intelligence, machine learning, and data science to solve real-world problems.</p>
     <div class="social-links">
       <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
       <a href="https://github.com/Saung210" target="_blank">GitHub</a>
-      <a href="saunghninphyu7210@gmail.com">Email</a>
-      <a href="+66979584521"?Phone</a>
+      <a href="mailto:saunghninphyu7210@gmail.com">Email</a>
+      <a href="tel:+66979584521">Phone</a>
     </div>
     <div class="scroll-down">↓ Continue</div>
   </div>
 
   <div class="container" id="about">
     <h2>About Me</h2>
-    <p>I am highly motivated and detail-oriented Data Scientist with a strong foundation in 
-       artificial intelligence, machine learning, and data science. Committed to working 
-       as a collaborative and positive team member, striving to utilize my knowledge and 
-       expertise for optimal engineering results.</p>
+    <p>I am a highly motivated and detail-oriented Data Scientist with a solid foundation in artificial intelligence, machine learning, and data science. I'm dedicated to collaborating with teams and utilizing my expertise to drive optimal engineering results.</p>
   </div>
 
   <div class="container" id="skills">
@@ -200,62 +216,22 @@
     <div class="projects">
       <div>
         <strong>RAIOne: Smart Inventory System with Chatbot</strong>
-        <p>This is my final year capstone project with my four teammates. My role was developing a chatbot.
-          RAIOne is a web and mobile application developed to address the inefficiencies of traditional student administration and inventory management systems in the Robotics and AI department at KMITL. 
-          By integrating modern technologies like React.js, NestJS, GraphQL, and PostgreSQL, the application streamlines equipment borrowing, student management, and approval workflows. 
-          The system also features an AI-powered chatbot using Python, GraphQL, LINE Messaging API and Line Frontend Framework (LIFF) to enhance user interaction and provide real-time assistance. 
-          This solution aims to improve efficiency, reduce errors, and enable scalable management of both student data and lab resources. The research focuses on creating an integrated platform that addresses gaps in existing systems.</p>
+        <p>This project addresses the inefficiencies of traditional student administration and inventory management systems at KMITL, utilizing technologies like React.js, NestJS, GraphQL, and PostgreSQL. It features an AI-powered chatbot using Python and GraphQL for real-time assistance.</p>
       </div>
       <div>
         <strong>Danish-English Translation Model</strong>
-        <p>This is my individual project while I was a remote Machine Learning Engineer Intern at VastHive Company Limited, based in Tórshavn, Faroe Islands, specializes
-           in digital solutions.This project explores various neural machine translation (NMT) approaches for translating Danish text into English. </p>
+        <p>As a Machine Learning Engineer Intern, I worked on developing a neural machine translation model for translating Danish to English, exploring various NMT approaches.</p>
       </div>
     </div>
   </div>
 
-  <div class="container" id="experience">
-    <h2>Experiences</h2>
-    <div>
-      <strong> Data Scientist </strong>
-      <p>Listening247, London, United Kingdom (February 2025 - Present)
-         Annotate unlabeled data with AI tool, precision check
-         Preprocessed and analyzed large text datasets to ensure high-quality input for model training,
-         Sentiment modeling, topic modeling and working with unlabeled data</p>
-    </div>
-    <div>
-      <strong>Data Scientist Intern</strong>
-      <p>Listening247, London, United Kingdom (July 2024 - January 2025)
-         Annotate unlabeled data with AI tool, precision check
-         Preprocessed and analyzed large text datasets to ensure high-quality input for model training,
-         Sentiment modeling, topic modeling and working with unlabeled data</p>
-    </div>
-    <div>
-      <strong>Machine Learning Engineer Intern</strong>
-      <p>Vast Hive, Faroe Islands, Denmark (May 2024 - October 2024)
-         Developed and optimized NLP Models by utilizing frameworks such as TensorFlow, PyTorch,
-         Preprocessed and analyzed large text datasets to ensure high-quality input for model training,
-         Train parallel data for machine translation</p>
-    </div>
-    <div>
-      <strong>Teaching Assistant</strong>
-      <p>King Mongkut's Institute of Technology, Ladkrabang, Bangkok, Thailand (July 2023 - April 2024)
-         Guided students through practical projects involving the programming languages,
-         Evaluated student projects and provided feedback to help improve their design and implementation skills.</p>
-    <div>
-      <strong>Game Research and Developer Intern</strong>
-      <p> Tokai University, Tokyo, Japan (May 2023 - July 2023)
-          Learned C# and Unity and developed a game by utilizing them</p>
-    </div>
-  </div>  
-    
   <div class="container" id="contact">
     <h2>Contact</h2>
-    <p>I'm currently open to opportunities! Feel free to reach out via email or connect with me on social media.</p>
+    <p>I'm open to opportunities! Feel free to reach out via email or connect with me on social media.</p>
     <div class="social-links">
       <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
       <a href="https://github.com/Saung210" target="_blank">GitHub</a>
-      <a href="saunghninphyu7210@gmail.com">Email</a>
+      <a href="mailto:saunghninphyu7210@gmail.com">Email</a>
     </div>
   </div>
 
