--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       --primary-color: #333;
       --secondary-color: #777;
       --accent-color: #0077b6;
-      --bg-color: #f7f7f7;
+      --bg-color: #ffffff; 
       --highlight-color: #ff7b7b;
       --border-radius: 8px;
-    }
+}
+
 
     * {
       margin: 0;
