--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
   <title>Saung Hnin Phyu | Data Scientist</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
-    :root {
-      --primary-color: #333;
-      --secondary-color: #777;
-      --accent-color: #0077b6;
-      --bg-color: #ffffff; 
-      --highlight-color: #ff7b7b;
-      --border-radius: 8px;
-}
-
-
     * {
       margin: 0;
       padding: 0;
@@ -24,221 +14,92 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: var(--bg-color);
-      color: var(--primary-color);
-      line-height: 1.6;
-      padding-top: 60px;
-    }
-
-    header {
-      padding: 20px 50px;
+      background-color: #ffffff;
+      color: #333;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
-      position: sticky;
-      top: 0;
-      background: #fff;
-      z-index: 1000;
-      border-bottom: 2px solid #eee;
+      min-height: 100vh;
+      padding: 20px;
     }
 
-    header strong {
-      font-size: 1.4rem;
-      font-weight: 700;
+    .profile-container {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+      flex-wrap: wrap;
+      max-width: 900px;
+      width: 100%;
     }
 
-    nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: var(--primary-color);
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: var(--accent-color);
-    }
-
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: auto;
-      padding: 50px 20px;
-      text-align: center;
-    }
-
-    .hero {
-      padding: 80px 20px;
-      background: var(--highlight-color);
-      color: white;
-      border-radius: var(--border-radius);
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .hero img {
-      width: 180px;
-      height: 180px;
+    .profile-photo {
+      width: 250px;
+      height: 250px;
       object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      border: 4px solid var(--accent-color);
+      border-radius: 12px;
+      border: 4px solid #0077b6;
     }
 
-    .hero h1 {
-      font-size: 2.8rem;
+    .profile-details {
+      flex: 1;
+    }
+
+    .profile-details h1 {
+      font-size: 2rem;
       margin-bottom: 10px;
     }
 
-    .hero p {
-      color: #f0f0f0;
-      max-width: 650px;
-      margin: auto;
-      font-size: 1.2rem;
-    }
-
-    .social-links {
-      margin-top: 20px;
-    }
-
-    .social-links a {
-      margin: 0 12px;
-      color: #fff;
-      font-size: 1.6rem;
-      transition: color 0.3s;
-    }
-
-    .social-links a:hover {
-      color: var(--accent-color);
-    }
-
-    section {
-      margin-top: 80px;
-      padding: 20px 0;
-    }
-
-    h2 {
-      font-size: 2.2rem;
-      margin-bottom: 25px;
+    .profile-details h2 {
+      font-size: 1.4rem;
       font-weight: 600;
-      color: var(--primary-color);
+      margin-bottom: 20px;
     }
 
-    .skills, .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 25px;
-      justify-items: center;
-      margin-top: 30px;
-    }
-
-    .skills div, .projects div {
-      padding: 20px;
-      background: #fff;
-      border-radius: var(--border-radius);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .skills div:hover, .projects div:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      margin-top: 50px;
-      background: var(--bg-color);
-      border-top: 1px solid #eee;
-      color: var(--secondary-color);
-      font-size: 0.9rem;
-    }
-
-    .scroll-down {
-      margin-top: 40px;
+    .profile-details p {
+      margin-bottom: 8px;
       font-size: 1rem;
-      color: #fff;
-      text-transform: uppercase;
-      font-weight: 600;
-      animation: bounce 2s infinite;
     }
 
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(8px); }
+    .buttons {
+      margin-top: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+
+    .buttons a {
+      padding: 10px 20px;
+      background-color: #0077b6;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: 600;
+      transition: background-color 0.3s;
+    }
+
+    .buttons a:hover {
+      background-color: #005f8c;
     }
   </style>
 </head>
 <body>
+  <div class="profile-container">
+    <img src="images/profile.png" alt="Saung Hnin Phyu" class="profile-photo" />
 
-  <header>
-    <div><strong>Saung Hnin Phyu</strong></div>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+    <div class="profile-details">
+      <h1>Saung Hnin Phyu</h1>
+      <h2>Data Scientist</h2>
+      <p><strong>Bachelor of Engineering</strong> (Robotics and AI Engineering)</p>
+      <p>Academic Year: Aug 2021 - Apr 2025</p>
+      <p>GPA: 3.75 / 4.00</p>
 
-  <div class="container hero">
-    <img src="images/profile.png" alt="Saung" />
-    <h1>Hello, I'm Saung!</h1>
-    <p>I am a Data Scientist with a passion for leveraging artificial intelligence, machine learning, and data science to solve real-world problems.</p>
-    <div class="social-links">
-      <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
-      <a href="https://github.com/Saung210" target="_blank">GitHub</a>
-      <a href="mailto:saunghninphyu7210@gmail.com">Email</a>
-      <a href="tel:+66979584521">Phone</a>
-    </div>
-    <div class="scroll-down">↓ Continue</div>
-  </div>
-
-  <div class="container" id="about">
-    <h2>About Me</h2>
-    <p>I am a highly motivated and detail-oriented Data Scientist with a solid foundation in artificial intelligence, machine learning, and data science. I'm dedicated to collaborating with teams and utilizing my expertise to drive optimal engineering results.</p>
-  </div>
-
-  <div class="container" id="skills">
-    <h2>Skills</h2>
-    <div class="skills">
-      <div>Python</div>
-      <div>C</div>
-      <div>C++</div>
-      <div>SQL</div>
-      <div>Linux</div>
-    </div>
-  </div>
-
-  <div class="container" id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div>
-        <strong>RAIOne: Smart Inventory System with Chatbot</strong>
-        <p>This project addresses the inefficiencies of traditional student administration and inventory management systems at KMITL, utilizing technologies like React.js, NestJS, GraphQL, and PostgreSQL. It features an AI-powered chatbot using Python and GraphQL for real-time assistance.</p>
-      </div>
-      <div>
-        <strong>Danish-English Translation Model</strong>
-        <p>As a Machine Learning Engineer Intern, I worked on developing a neural machine translation model for translating Danish to English, exploring various NMT approaches.</p>
+      <div class="buttons">
+        <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/Saung210" target="_blank">GitHub</a>
+        <a href="mailto:saunghninphyu7210@gmail.com">Email</a>
+        <a href="your-cv-link.pdf" target="_blank" download>Download CV</a>
       </div>
     </div>
   </div>
-
-  <div class="container" id="contact">
-    <h2>Contact</h2>
-    <p>I'm open to opportunities! Feel free to reach out via email or connect with me on social media.</p>
-    <div class="social-links">
-      <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
-      <a href="https://github.com/Saung210" target="_blank">GitHub</a>
-      <a href="mailto:saunghninphyu7210@gmail.com">Email</a>
-    </div>
-  </div>
-
-  <footer>
-    &copy; 2025 Saung Hnin Phyu. All rights reserved.
-  </footer>
-
 </body>
 </html>
