--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
         <a href="https://github.com/Saung210" target="_blank">GitHub</a>
         <a href="mailto:saunghninphyu7210@gmail.com">Email</a>
-        <a href="your-cv-link.pdf" target="_blank" download>Download CV</a>
+        <a href="CV.pdf" target="_blank" download>Download CV</a>
       </div>
     </div>
   </div>
