--- a/index.html
+++ b/index.html
@@ -2,46 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Saung Hnin Phyu | Data Scientist</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #ffffff;
+      background: white;
+      margin: 0;
+      padding: 40px;
       color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
     }
 
-    .profile-container {
+    .profile-section {
       display: flex;
       align-items: center;
-      gap: 40px;
+      justify-content: space-between;
       flex-wrap: wrap;
-      max-width: 900px;
-      width: 100%;
-    }
-
-    .profile-photo {
-      width: 250px;
-      height: 250px;
-      object-fit: cover;
-      border-radius: 12px;
-      border: 4px solid #0077b6;
+      max-width: 1000px;
+      margin: auto;
+      gap: 30px;
     }
 
     .profile-details {
-      flex: 1;
+      max-width: 550px;
     }
 
     .profile-details h1 {
@@ -49,57 +33,78 @@
       margin-bottom: 10px;
     }
 
-    .profile-details h2 {
-      font-size: 1.4rem;
-      font-weight: 600;
-      margin-bottom: 20px;
-    }
-
     .profile-details p {
-      margin-bottom: 8px;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      margin: 5px 0;
     }
 
-    .buttons {
-      margin-top: 20px;
+    .button-group {
+      margin-top: 25px;
       display: flex;
       flex-wrap: wrap;
-      gap: 12px;
+      gap: 15px;
     }
 
-    .buttons a {
-      padding: 10px 20px;
-      background-color: #0077b6;
-      color: white;
+    .button-group a {
       text-decoration: none;
+      background: #e0e0e0;
+      color: #333;
+      padding: 10px 20px;
       border-radius: 8px;
       font-weight: 600;
-      transition: background-color 0.3s;
+      transition: background 0.3s ease;
     }
 
-    .buttons a:hover {
-      background-color: #005f8c;
+    .button-group a:hover {
+      background: #ccc;
+    }
+
+    .profile-photo {
+      flex-shrink: 0;
+    }
+
+    .profile-photo img {
+      width: 220px;
+      height: 220px;
+      object-fit: cover;
+      border-radius: 8px;
+      border: 3px solid #ddd;
+    }
+
+    @media (max-width: 768px) {
+      .profile-section {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .button-group {
+        justify-content: center;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="profile-container">
-    <img src="images/profile.png" alt="Saung Hnin Phyu" class="profile-photo" />
 
+  <div class="profile-section">
     <div class="profile-details">
       <h1>Saung Hnin Phyu</h1>
-      <h2>Data Scientist</h2>
-      <p><strong>Bachelor of Engineering</strong> (Robotics and AI Engineering)</p>
-      <p>Academic Year: Aug 2021 - Apr 2025</p>
-      <p>GPA: 3.75 / 4.00</p>
+      <p><strong>Data Scientist</strong></p>
+      <p>Bachelor of Engineering (Robotics and AI Engineering)</p>
+      <p>Academic Year: Aug 2021 - Apr 2025 (GPA 3.75/4)</p>
 
-      <div class="buttons">
+      <div class="button-group">
         <a href="https://www.linkedin.com/in/saunghninphyu/" target="_blank">LinkedIn</a>
         <a href="https://github.com/Saung210" target="_blank">GitHub</a>
         <a href="mailto:saunghninphyu7210@gmail.com">Email</a>
-        <a href="CV.pdf" target="_blank" download>Download CV</a>
+        <a href="https://drive.google.com/file/d/1AlH4frpd7PzeIbghDghKjvWU5_xUw9z-/view?usp=drive_link" target="_blank" download>Download CV</a>
       </div>
     </div>
+
+    <div class="profile-photo">
+      <img src="images/profile.png" alt="Saung Hnin Phyu" />
+    </div>
   </div>
+
 </body>
 </html>
