--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name"><img src="/assets/img/transformers.png" class="skills__logo"
+                                    <h3 class="skills__name"><img src="/assets/img/transformers.jpg" class="skills__logo"
                                             width="20px" alt=""> Transformers, Tensorflow, Pytorch</h3>
                                 </div>
                             </div>
@@ -282,7 +282,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name"><img src="/assets/img/minitab.png" class="skills__logo"
+                                    <h3 class="skills__name"><img src="/assets/img/minitab.jpg" class="skills__logo"
                                             width="20px" alt=""> Minitab</h3>
                                 </div>
                             </div>
@@ -350,7 +350,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== Certificate 1 ====================-->
                     <div class="project__content grid swiper-slide">
-                        <img src="/assets/img/supervised.jpg" alt="" class="project__img">
+                        <img src="/assets/img/supervised.png" alt="" class="project__img">
 
                         <div class="project__data">
                             <p>Supervised Machine Learning: Regression and Classification by DeepLearning.AI, Coursera</p>
@@ -363,7 +363,7 @@
                     </div>
                     <!--==================== Certificate 2 ====================-->
                     <div class="project__content grid swiper-slide">
-                        <img src="/assets/img/data_driven.jpg" alt="" class="project__img">
+                        <img src="/assets/img/data_driven.png" alt="" class="project__img">
 
                         <div class="project__data">
                             <p>Ask Questions to Make Data-Driven Decisions by Google, Coursera</p>
@@ -376,7 +376,7 @@
                     </div>
                    <!--==================== Certificate 3 ====================-->
                     <div class="project__content grid swiper-slide">
-                        <img src="/assets/img/foundation.jpg" alt="" class="project__img">
+                        <img src="/assets/img/foundation.png" alt="" class="project__img">
 
                         <div class="project__data">
                             <p>Foundations: Data, Data, Everywhere by Google, Coursera</p>
@@ -389,7 +389,7 @@
                     </div>
                   <!--==================== Certificate 4 ====================-->
                     <div class="project__content grid swiper-slide">
-                        <img src="/assets/img/exploration.jpg" alt="" class="project__img">
+                        <img src="/assets/img/exploration.png" alt="" class="project__img">
 
                         <div class="project__data">
                             <p>Prepare Data for Exploration by Google, Coursera</p>
@@ -402,7 +402,7 @@
                     </div>
                   <!--==================== Certificate 5 ====================-->
                     <div class="project__content grid swiper-slide">
-                        <img src="/assets/img/aws.jpg" alt="" class="project__img">
+                        <img src="/assets/img/aws.png" alt="" class="project__img">
 
                         <div class="project__data">
                             <p>AWS Academy Graduate - AWS Academy Cloud Foundations</p>
