--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
             <div data-aos="fade-left" class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="https://www.instagram.com/mr1m0y._dev"
-                            target="_blank" class="home__social-icon">
-                            <i class="uil uil-instagram"></i>
+                        <a href="mailto:saunghninphyu7210@gmail.com" target="_blank" class="home__social-icon">
+                            <i class="uil uil-envelope"></i>
                         </a>
                         <a href="https://github.com/Saung210" target="_blank" class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
