--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
         <!--==================== EXPERIENCE 1 ====================-->
         <div class="services__content">
             <div>
-                <i class="uil uil-web-grid services__icon"></i>
+                <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Data Scientist <br> @Listening247 (formerly DMR)</h3>
-                <p class="experiences__subtitle">Remote | Feb 2025 - Apr 2025</p>
+                <p class="experiences__subtitle">Remote |<br> Feb 2025 - Apr 2025</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -473,7 +473,7 @@
             <div>
                 <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Data Scientist Intern <br> @Listening247 (formerly DMR)</h3>
-                <p class="experiences__subtitle">Remote | Jul 2024 - Jan 2025</p>
+                <p class="experiences__subtitle">Remote |<br> 2024 - Jan 2025</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -507,9 +507,9 @@
         <!--==================== EXPERIENCE 3 ====================-->
         <div class="services__content">
             <div>
-                <i class="uil uil-pen services__icon"></i>
+                <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Machine Learning Engineer Intern <br> @Vast Hive</h3>
-                <p class="experiences__subtitle">Remote | May 2024 - Oct 2024</p>
+                <p class="experiences__subtitle">Remote |<br> May 2024 - Oct 2024</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -543,9 +543,9 @@
         <!--==================== EXPERIENCE 4 ====================-->
         <div class="services__content">
             <div>
-                <i class="uil uil-pen services__icon"></i>
+                <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Teaching Assistant <br> @King Mongkut's Institute of Technology, Ladkrabang</h3>
-                <p class="experiences__subtitle">Bangkok, Thailand | Jul 2023 - Apr 2024</p>
+                <p class="experiences__subtitle">Bangkok, Thailand |<br> Jul 2023 - Apr 2024</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -583,9 +583,9 @@
         <!--==================== EXPERIENCE 5 ====================-->
         <div class="services__content">
             <div>
-                <i class="uil uil-pen services__icon"></i>
+                <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Game Research and Developer Intern <br> @Tokai University</h3>
-                <p class="experiences__subtitle">Tokyo, Japan | May 2023 - Jun 2023</p>
+                <p class="experiences__subtitle">Tokyo, Japan |<br> May 2023 - Jun 2023</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -615,9 +615,9 @@
         <!--==================== EXPERIENCE 6 ====================-->
         <div class="services__content">
             <div>
-                <i class="uil uil-pen services__icon"></i>
+                <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Public Relations <br> @King Mongkut's Institute of Technology, Ladkrabang</h3>
-                <p class="experiences__subtitle">Bangkok, Thailand | Aug 2022 - Jul 2023</p>
+                <p class="experiences__subtitle">Bangkok, Thailand |<br> Aug 2022 - Jul 2023</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -725,7 +725,6 @@
         <!--==================== LANGUAGE ====================-->
         <section class="testimonial section">
             <h2 class="section__title">Languages</h2>
-            <span class="section__subtitle swiper-error">Slide here to see next>>></span>
 
             <div data-aos="fade-in" class="testimonial__container container swiper-container">
                 <div class="swiper-wrapper">
@@ -734,45 +733,22 @@
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
-                                <img src="/assets/img/language1.jpg" alt="" class="testimonial__img">
-
                                 <div>
-                                    <h3 class="testimonial__name">English (Professional Proficiency)</h3>
-                                    <span class="testimonial__client">IELTS: Overall Band 7</span>
+                                    <h3 class="testimonial__name">🇲🇲 Burmese</h3>
+                                    <span class="testimonial__client">🗣️ Native</span>
+                                    
+                                    <h3 class="testimonial__name">🇬🇧 English</h3>
+                                    <span class="testimonial__client">💼 Professional Proficiency<br>📄 IELTS: Overall Band 7</span>
+                                    
+                                    <h3 class="testimonial__name">🇯🇵 Japanese</h3>
+                                    <span class="testimonial__client">🎌 Intermediate<br>📝 Passed JLPT N4</span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--==================== LANGUAGE 2 ====================-->
-                    <div class="testimonial__content swiper-slide">
-                        <div class="testimonial__data">
-                            <div class="testimonial__header">
-                                <img src="/assets/img/language2.jpg" alt="" class="testimonial__img">
-
-                                <div>
-                                    <h3 class="testimonial__name">Burmese (Native)</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--==================== LANGUAGE 3 ====================-->
-                    <div class="testimonial__content swiper-slide">
-                        <div class="testimonial__data">
-                            <div class="testimonial__header">
-                                <img src="/assets/img/language3.jpg" alt="" class="testimonial__img">
-
-                                <div>
-                                    <h3 class="testimonial__name">Japanese (Intermidiate)</h3>
-                                    <span class="testimonial__client">Passed JLPT N4</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination swiper-pagination-testimonial"></div>
                 </div>
-
-                <!-- Add Pagination -->
-                <div class="swiper-pagination swiper-pagination-testimonial"></div>
-            </div>
         </section>
 
         <!--==================== CONTACT ME ====================-->
