--- a/index.html
+++ b/index.html
@@ -736,10 +736,10 @@
                                 <div>
                                     <h3 class="testimonial__name">🇲🇲 Burmese</h3>
                                     <span class="testimonial__client">🗣️ Native</span>
-                                    
-                                    <h3 class="testimonial__name">🇬🇧 English</h3>
+                                    <br>
+                                    <h3 class="testimonial__name">🇪🇳 English</h3>
                                     <span class="testimonial__client">💼 Professional Proficiency<br>📄 IELTS: Overall Band 7</span>
-                                    
+                                    <br>
                                     <h3 class="testimonial__name">🇯🇵 Japanese</h3>
                                     <span class="testimonial__client">🎌 Intermediate<br>📝 Passed JLPT N4</span>
                                 </div>
