--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 experience</span>
                         </div>
                         <div>
-                            <span class="about__info-title">20+</span>
+                            <span class="about__info-title">15+</span>
                             <span class="about__info-name">Completed <br />
                                 project</span>
                         </div>
@@ -260,16 +260,6 @@
                         </div>
 
                         <div class="skills__list grid">
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name"><img src="/assets/img/php.png" class="skills__logo"
-                                            width="20px" alt=""> PHP</h3>
-                                    <span class="skills__number">90%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__php"></span>
-                                </div>
-                            </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name"><img src="/assets/img/sci.png" class="skills__logo"
@@ -433,7 +423,7 @@
             <div>
                 <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Data Scientist <br> @Listening247 (formerly DMR)</h3>
-                <p class="experiences__subtitle">Remote |<br> Feb 2025 - Apr 2025</p>
+                <p class="experiences__subtitle">Remote |<br> Feb 2025 - May 2025</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -473,7 +463,7 @@
             <div>
                 <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Data Scientist Intern <br> @Listening247 (formerly DMR)</h3>
-                <p class="experiences__subtitle">Remote |<br> 2024 - Jan 2025</p>
+                <p class="experiences__subtitle">Remote |<br> Jul 2024 - Jan 2025</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -668,7 +658,7 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">RAIOne (Smart Inventory System with Chatbot)</h3>
                             <p class="portfolio__description">RAIOne is a smart inventory management system built for the Robotics and AI Engineering Department to digitize and streamline lab equipment borrowing and returning. The system features a user-friendly web interface built with React.js and TypeScript, and a robust backend using NestJS, GraphQL, and PostgreSQL with AI-powered Chatbot.
-                               I was responsible for designing and developing the AI-powered RAIOne Line chatbot using Python and Ollama. 
+                               <br>I was responsible for designing and developing the AI-powered RAIOne Line chatbot using Python and Ollama. 
                                I integrated it with the LINE messaging platform to automate user queries, support real-time inventory updates, and handle secure authentication using JWT. The project enhances the overall user experience by offering instant assistance on availability, borrowing policies, and deadlines, reducing admin workload and improving communication efficiency.</p>
                             <a href="https://youtu.be/7ih4A6LsNvY" target="_blank" class="button button--flex button--small portfolio__button">
                                 Demo
