--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div>
                 <i class="uil uil-arrow services__icon"></i>
                 <h3 class="services__title">Data Scientist <br> @Listening247 (formerly DMR)</h3>
-                <p class="experiences__subtitle">Remote |<br> Feb 2025 - May 2025</p>
+                <p class="experiences__subtitle">Remote |<br> Feb 2025 - Present</p>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -433,7 +433,7 @@
 
             <div class="services__modal">
                 <div class="services__modal-content">
-                    <h4 class="services__modal-title">Data Scientist <br> Feb 2025 - Apr 2025</h4>
+                    <h4 class="services__modal-title">Data Scientist <br> Feb 2025 - Present</h4>
                     <i class="uil uil-times services__modal-close"></i>
 
                     <ul class="services__modal-services grid">
